fix width of wrap for contact form and bookings/requests, add statement for when host is travelling

--- a/app/assets/stylesheets/components/_requests.scss
+++ b/app/assets/stylesheets/components/_requests.scss
@@ -2,6 +2,8 @@
 	margin: 4rem auto;
 	width: 100%;
 
+	@media (min-width: $break-large) { width: 70%; }
+
 	&__wrap {
 		@include container-width;
 
